feat: Update favicon and add AdSense ID
Replaces the default Vite favicon with a custom icon and includes the AdSense publisher ID in the ads.txt file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://copilot.microsoft.com/th/id/BCO.a2a411f5-d355-412d-bfe5-87cb78196170.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Handy Calculators</title>
     <script src="https://cdn.tailwindcss.com"></script>
